# tcalc

./: CMakeLists.txt  Makefile  README.txt  prolog.cpp  tcalc.cpp  tcalc.h  test.cpp
include/: tcalc.h
src/: test.cpp
